# mitg.forge

./: .env.example  .gitignore  .npmrc  Cargo.toml  Makefile  SECURITY.md  biome.json  commitlint.config.js  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sonar-project.properties  turbo.json
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug.yaml  request.yaml
.github/workflows/: lint.yml  todo-to-issue.yml
apps/api/: .env.example  Dockerfile  package.json  prisma.config.ts  tsconfig.dev.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/prisma/models/: base.prisma  confirmations.prisma  registration.prisma  session.prisma  shop.prisma  worlds.prisma
apps/api/prisma/seed/: index.ts
apps/api/src/: index.ts
apps/api/src/jobs/: bootstrap.ts  factory.ts
apps/api/src/repositories/: account.repository.ts
apps/api/src/types/: global.d.ts
apps/api/src/utils/: paginate.ts
apps/client/: package.json  vite.config.ts
apps/client/src/: App.tsx  global.css  main.tsx
apps/client/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src/game/: GameStage.tsx  (+1 more)
apps/web/: .env.example  Dockerfile  nginx.conf  package.json  tsconfig.json
apps/web/src/: app.tsx  global.css  routeTree.gen.ts  router.tsx
crates/assets/: Cargo.toml  build.rs
crates/assets/proto/: appearances.proto  sounds.proto
crates/assets/src/: appearances.rs  bmp.rs  catalog.rs  image.rs  lib.rs  lzma.rs  sprites.rs  thing_plan.rs
crates/assets/src/protobuf/: mod.rs
docs/: README.md
(+464 files in other folders)
