[workspace]
resolver = "2"

members = ["apps/client/src-tauri", "crates/assets"]

[workspace.dependencies]
rand = "0.8"
rand_core = "0.6"

anyhow = "1.0.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
hex = "0.4.3"

# LZMA
lzma-rs = "0.3"
xz2 = "0.1"

# BMP decode (e PNG encode se você quiser devolver PNG pro front depois)
image = { version = "0.25", default-features = false, features = [
  "bmp",
  "png",
] }
